Ported RocketLauncher driver to VS2017 / pure C++ 11.

--- a/RocketLauncherDriver/RocketLauncherDriver/RocketLauncherDriver.vcxproj.filters
+++ b/RocketLauncherDriver/RocketLauncherDriver/RocketLauncherDriver.vcxproj.filters
@@ -24,12 +24,24 @@
     <ClInclude Include="targetver.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="RocketLauncherDevice.hpp">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="HidDevice.hpp">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="hidapi.hpp">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="RocketLauncherDriver.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="RocketLauncherDevice.cxx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
