--- a/RocketLauncherDriver/RocketLauncherDriver/RocketLauncherDriver.vcxproj
+++ b/RocketLauncherDriver/RocketLauncherDriver/RocketLauncherDriver.vcxproj
@@ -148,11 +148,15 @@
     <ClInclude Include="hidapi.hpp" />
     <ClInclude Include="HidDevice.hpp" />
     <ClInclude Include="RocketLauncherDevice.hpp" />
+    <ClInclude Include="RocketLauncherDeviceReal.h" />
+    <ClInclude Include="RocketLauncherDeviceSim.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="RocketLauncherDevice.cxx" />
+    <ClCompile Include="RocketLauncherDeviceReal.cpp" />
+    <ClCompile Include="RocketLauncherDeviceSim.cpp" />
     <ClCompile Include="RocketLauncherDriver.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
